Looking up FFMPEG location at runtime with which Fixing tests